# crs

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt  rustfmt.toml  typos.toml
.github/workflows/: clippy.yml  rustdoc.yml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs  user.rs
backend/tests/: connect-feedback.rs
crs-backend/: Cargo.toml
crs-backend/src/: lib.rs  main.rs  message.rs  room.rs  user.rs
crs-tui/: Cargo.toml
crs-tui/src/: app.rs  credentials.rs  main.rs  tui.rs  utils.rs
crs-tui/src/app/: chat.rs  login.rs  mod.rs  screen.rs
crs-tui/src/app/chat/: conversation.rs  menu.rs  mod.rs
crs-tui/src/app/chat/current_room/: create.rs  discussion.rs  invite_member.rs  invited.rs  invited_not_joined.rs  mod.rs  search.rs
crs-tui/src/app/chat/current_room/actions/: create_room.rs  mod.rs  search_room.rs
crs-tui/src/app/chat/current_room/prompts/: create_room.rs  mod.rs  search_room.rs
crs-tui/src/ui/: component.rs  components.rs  derive.rs  input.rs  login.rs  mod.rs  prompt.rs  screen.rs  widgets.rs
crs-tui/src/ui/prompt/: candidates.rs  entries.rs  mod.rs  results.rs
server/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  tmux.sh
tui/: Cargo.toml
tui/src/: app.rs  main.rs
