[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"
# must be same version than matrix-sdk-test
matrix-sdk = "0.14.0"

[dev-dependencies]
# must be same version than matrix-sdk
matrix-sdk-test = "0.14.0"
