[package]
name = "crs_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
matrix-sdk = { version = "0.13.0" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"

[[bin]]
name = "test-backend"
path = "src/main.rs"

[lib]
name = "backend"
path = "src/lib.rs"
