[package]
name = "crs-backend"
version = "0.1.0"
edition = "2024"
description = "Interface to expose the Mautrix connection logic"
license = "MIT OR Apache-2.0"
authors = ["Tom Webber"]
repository = "https://github.com/t-webber/crs"
readme = "../README.md"
keywords = ["TUI", "ratatui", "chat", "mautrix", "client"]
categories = [
  "command-line-utilities",
  "network-programming",
  "web-programming",
  "data-structures",
  "utilities",
]

[dependencies]
matrix-sdk = { version = "0.13.0" }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"

[[bin]]
name = "test-backend"
path = "src/main.rs"

[lib]
name = "backend"
path = "src/lib.rs"
